--- a/src/components/ScrollToTopButton/ScrollToTopButton.module.css
+++ b/src/components/ScrollToTopButton/ScrollToTopButton.module.css
@@ -12,7 +12,7 @@
     align-items: center;
     cursor: pointer;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    z-index: 1000;
+    z-index: 1;
     transition: opacity 0.3s ease-in-out, background-color 0.3s, transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
     opacity: 0;
     visibility: hidden;
